# dcn-benchmark

./: .gitignore  README.md  pyproject.toml
configs/: scenario_small.yaml
scripts/: verify_simulation.py
src/generation/: faults.py  scenarios.py  simulate.py  topologies.py
src/models/: evaluate.py  train.py
src/models/architectures/: __init__.py
src/processing/: graph_builder.py  labeling.py
